@@ -755,6 +755,53 @@ notebook > header tab button.flat:last-child {
 notebook > header tab button.flat:first-child {
   margin-right: 0.25em;
 }
+tabbox tab {
+  background-color: #1f1f1f;
+  border-top-color: #afafaf;
+  border-left-color: #afafaf;
+  border-right-color: #4f4f4f;
+  border-bottom-color: #4f4f4f;
+  border-style: solid;
+  border-top-width: 2px;
+  border-left-width: 2px;
+  border-right-width: 2px;
+  border-bottom-width: 2px;
+  padding: 0.25em;
+}
+tabbox tab:hover {
+  background-color: #1a1a52;
+}
+tabbox tab:active, tabbox tab:checked {
+  background-color: #1a521a;
+  border-top-color: #4f4f4f;
+  border-left-color: #4f4f4f;
+  border-right-color: #afafaf;
+  border-bottom-color: #afafaf;
+}
+tabbox tab:disabled {
+  border-color: #4f4f4f;
+}
+tabbox tab:backdrop:not(:hover):not(:active):not(:checked):not(:disabled) {
+  background-color: #1f1f1f;
+  border-top-color: #a7a7a7;
+  border-left-color: #a7a7a7;
+  border-right-color: #575757;
+  border-bottom-color: #575757;
+}
+tabbox tab:drop(active) {
+  border-top-color: #0f0fef;
+  border-left-color: #0f0fef;
+}
+tabbox tab.destructive-action {
+  background-color: #871717;
+}
+tabbox tab.destructive-action:hover {
+  background-color: #4f1717;
+}
+tabbox tab.destructive-action:active, tabbox tab.destructive-action:checked {
+  background-color: #ef0f0f;
+}
+
 /**************
  * Scrollbars *
  **************/
