@@ -2,6 +2,9 @@ Netronic: Changes
 
 —Update 0
 
+——Revision 3, 02/26/2022.
+- Epiphany webpage tab button styles.
+
 ——Revision 2, 11/06/2021.
 - Fixed button backdrop disabled colors.
 
